--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
+#ignore vendor static files
+src\staticfiles\vendors
+
+#ignore local static files root
+# or "local-cdn"
+local-cdn/
+
 env/
 # Byte-compiled / optimized / DLL files
 __pycache__/
